Fixed a css issue and some final touch ups

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -159,7 +159,7 @@ select {
   padding: .5rem .75rem;
 }
 .convo-item{
-  border-top: 1px solid #555555;
+  border-bottom: 0.5px solid #555555;
 }
 
 .custom-message-bg-ai{
@@ -170,7 +170,8 @@ select {
   width: 45px;
   height: 45px;
   margin-right: 6px;
-  border: 1px solid #616161;
+  border-radius: 6px;
+  border: 0.5px solid #616161;
 }
 
 .overflow-y-auto {
